Corrects problem in setting Java garbage collection switched in bin/dcs
The file conf/dcs-env.sh was missing some basic params for
analysing GC. Also the script bin/dcs didn't correctly set
the switches in SERVER_GC_OPTS variable.

Closes bug: 1429344

Change-Id: Iabdc0443900990c24c6a13b634eeccf00ea3b630